pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-demo-pod
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
