Service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anita-next-app-deployment
  namespace: anita-namespace
  labels:
    app: nextjs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: nextjs
        image: anita-tag:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextjs
  name: anita-next-app-service
spec:
  type: ClusterIP #Default
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: nextjs #podat qe e kan label @nextjs

---

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: nginx
#   name: nginx-deployment-nodeport
# spec:
#   type: NodePort
#   ports:
#   - port: 80
#     protocol: TCP
#     targetPort: 80
#     nodePort: 30007
#   selector:
#     app: nginx
