ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anita-next-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: anita.next.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anita-next-app-service
              namespace: anita-namespace
            port:
              number: 80
